--- a/PortStyle.css
+++ b/PortStyle.css
@@ -129,6 +129,7 @@ main
     .face-image-container, .information {
         flex: unset;
         width: 100%;
+        text-align:center;
     }
     .information {
         padding-left: 0; /* Remove o padding esquerdo */
@@ -153,6 +154,11 @@ main
 
     .information p {
         font-size: 0.9em;
+        text-align:center;
+    }
+    .information {
+        padding-left: 0; /* Remove o padding esquerdo */
+        padding-right: 0; /* Remove o padding direito */
     }
 }
 
@@ -532,6 +538,16 @@ footer {
         display: flex;
         justify-content: center;
         gap: 5px;
+    }
+    .carousel-indicators .indicator 
+    {
+        width: 8px;
+        height: 8px;
+        background-color: #fff;
+        border-radius: 50%;
+        cursor: pointer;
+        opacity: 0.5;
+        transition: opacity 0.3s;
     }
 
 }
