--- a/PortStyle.css
+++ b/PortStyle.css
@@ -434,10 +434,51 @@ footer {
     min-width: 100%;
     box-sizing: border-box;
 }
+.carousel-item:hover{
+     filter: blur(2px); /* Desfocar a imagem */
+     cursor: pointer;
+}
 
 .carousel img {
     width: 100%;
     display: block;
+    transition: filter 0.3s ease; /* Transição suave para o filtro */
+}
+
+
+.carousel:hover .carousel-overlay {
+    opacity: 1; /* Exibe o overlay quando o mouse está sobre o carrossel */
+    cursor: pointer;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px; /* Definir a largura da área da logo */
+    height: 150px; /* Definir a altura da área da logo */
+
+    border-radius: 50%; /* Deixar a div da logo circular */
+}
+
+.artstation-icon {
+    width: auto;
+    height: auto;
+    opacity: 0.9;
+}
+
+.carousel-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
+    transition: opacity 0.3s ease;
 }
 
 .carousel-buttons {
@@ -612,6 +653,20 @@ footer {
         opacity: 0.5;
         transition: opacity 0.3s;
     }
+
+    .carousel-overlay {
+        display: none; /* Remove o overlay e a logo em telas menores */
+    }
+
+    .carousel-link:hover img {
+        filter: none; /* Remove o desfoque em dispositivos móveis */
+    }
+
+    .carousel-link {
+        pointer-events: none; /* Desativa o clique no carrossel em dispositivos móveis */
+    }
+
+
     .social-media-bottom a img {
         width: 55px;
         height: 55px;
